
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SUCCESS ;
 int fflush (int ) ;
 int printf (char*,char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int stdout ;
 int strlen (char*) ;

int do_remote_shell(int shellSock)
{
fd_set rfds;
char buf[1024];
int retval, r=1;

do {
FD_ZERO(&rfds);
FD_SET(0, &rfds);
FD_SET(shellSock, &rfds);
retval=select(shellSock+1, &rfds, ((void*)0), ((void*)0), ((void*)0));
if(retval) {
if(FD_ISSET(shellSock, &rfds)) {
buf[(r=recv(shellSock, buf, sizeof(buf)-1,0))]='\0';
printf("%s", buf);fflush(stdout);
}
if(FD_ISSET(0, &rfds)) {
buf[(r=read(0, buf, sizeof(buf)-1))]='\0';
send(shellSock, buf, strlen(buf), 0);
}
}
} while(retval && r);
return SUCCESS;
}
